# modern-cpp

ejemplos/0-serialización/: CMakeLists.txt  serialise.cpp
ejemplos/1-serialización/: CMakeLists.txt  serialise.cpp
ejemplos/2-deserialización/: .clang-tidy  CMakeLists.txt  deserialise.cpp
ejemplos/3-templates/: CMakeLists.txt  templates.cpp
transparencias/: README.md  transparencias.md
